# Personal-Study

./: .gitignore  README.md  ad.html  app.py
C++/: timer.cpp
Python/24-Hour-Digital-Clock/: 24-Hour-Digital-Clock-Pseudocode.txt  24-Hour-Digital-Clock.py  README.md  build_exe.cmd  build_exe.ps1  build_exe.sh  clock_gui.py  pyproject.toml
Python/24-Hour-Digital-Clock/clock_app/: __init__.py  console.py  core.py  gui.py  storage.py
Python/24-Hour-Digital-Clock/tests/: test_console.py  test_core.py  test_gui.py  test_storage.py
python/24-Hour-Digital-Clock/: 24-Hour-Digital-Clock-Pseudocode.txt  24-Hour-Digital-Clock.py
python/24-Hour-Digital-Clock/tests/: __init__.py  test_core.py  test_gui.py
